White space anomaly fix-1

--- a/src/containers/HomePage/style.css
+++ b/src/containers/HomePage/style.css
@@ -1,4 +1,4 @@
-body{margin-top:20px;}
+
 
 .chat-online {
     color: #34ce57
